<resources>
    <string name="app_name">Juwelier Behrendt</string>
    <string name="edit_product">Edit Product</string>
    <string name="name_of_the_product">name of the product</string>
    <string name="description">description</string>
    <string name="kind">kind</string>
    <string name="nothing_selected">nothing selected</string>
    <string name="edit_kind">edit Kind</string>
    <string name="add_kind">add Kind</string>
    <string name="brand">brand</string>
    <string name="edit_brand">Edit Brand</string>
    <string name="add_brand">add brand</string>
    <string name="amount">Amount</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="delete_picture">Delete Picture</string>
    <string name="add_picture">Add picture</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="add_product">Add Product</string>
    <string name="edit">edit</string>
    <string name="picture">Picture</string>
    <string name="pleasePickProdName">Please pick a name for the product!</string>
    <string name="pleasePickProdPrice">Please pick a price for the product!</string>
    <string name="edited">edited</string>
    <string name="deleted">deleted</string>
    <string name="pic_deleted">Picture deleted!</string>
    <string name="pic_not_deleted">Picture not deleted!</string>
    <string name="save_failed">Save failed!</string>
    <string name="picture_saved">Picture saved!</string>
    <string name="picture_not_saved">Picture not saved!</string>

    <string name="priceInvalidInput">Price is invalid!</string>
    <string name="nameInvalidInput">Name is invalid!</string>
    <string name="disInvalidInput">Discount is invalid!</string>

    <string name="prodAdded">Product added!</string>
    <string name="prodDeleted">Product deleted!</string>
    <string name="prodEdited">Product edited!</string>

    <string name="error">Error</string>
    <string name="errorCode">Errorcode</string>
    <string name="catalog">catalog</string>
    <string name="search_for_a_piece">search for a piece</string>


    <string-array name="brands">
        <item>no brand selected</item>
        <item>Fossil</item>
        <item>Tissot</item>
        <item>Casio</item>
        <item>Maurice Lacroix</item>
    </string-array>
    <string-array name="jewelryType">
        <item>wrist watch</item>
        <item>clock</item>
        <item>chain</item>
        <item>ring</item>
        <item>Earring</item>
        <item>Maurice Lacroix</item>
    </string-array>


</resources>